--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\lucky\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\jmm\\AppData\\Roaming\\NetBeans\\15\\build.properties
